--- a/Angular/src/style.scss
+++ b/Angular/src/style.scss
@@ -119,3 +119,34 @@ section .mat-expansion-panel-body{
   font-size: 14px;
   font-family: $regular-text-font;
 }
+
+input[type="checkbox"]{
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: $primary-background-color;
+  font: inherit;
+  color: $text-color;
+  width: 1em;
+  height: 1em;
+  border: 0.15em solid $text-color;
+  border-radius: 0.15em;
+  transform: translateY(-0.075em);
+  display: grid;
+  place-content: center;
+  cursor: pointer;
+}
+
+input[type="checkbox"]::before {
+  content: "";
+  width: 0.6em;
+  height: 0.6em;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em $accent-color;
+  transform-origin: bottom left;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+
+input[type="checkbox"]:checked::before {
+  transform: scale(1);
+}
