--- a/Angular/src/app/list-create/list-create.component.html
+++ b/Angular/src/app/list-create/list-create.component.html
@@ -1,11 +1,5 @@
 <div id="container">
-  <div id="title-container">
-    <input [(ngModel)]="title" (keyup)="onChange($event)" placeholder="Enter title">
-    <button type="submit" (click)="handleSubmit($event)" [disabled]="disabled">Submit</button>
-  </div>
-  <div id="validation-messages-container">
-    <app-validation-message [message]="message" *ngFor="let message of validationMessages"></app-validation-message>
-  </div>
+  <app-list-title-editor [isArchived]="isArchived" [type]="0"></app-list-title-editor>
   <div id="archived-container">
     <input type="checkbox" id="archived" [(ngModel)]="isArchived">
     <label for="archived">Archived</label>
