--- a/Angular/src/app/side-menu/side-menu-list-element/side-menu-list-element.component.html
+++ b/Angular/src/app/side-menu/side-menu-list-element/side-menu-list-element.component.html
@@ -10,7 +10,7 @@
   [showSubtitle]="false"
   [showUnits]="false"
   ></circle-progress>
-  <circle-progress *ngIf="list.itemsInProcess != 0 && list.itemsCompleted != 0"
+  <circle-progress *ngIf="list.itemsInProcess != 0 || list.itemsCompleted != 0"
     [percent]="((list.itemsInProcess + list.itemsCompleted) * 100)/(list.itemsNotStarted + list.itemsInProcess + list.itemsCompleted)"
     [radius]="8"
     [outerStrokeWidth]="3"
@@ -21,7 +21,7 @@
     [showSubtitle]="false"
     [showUnits]="false"
   ></circle-progress>
-  <circle-progress *ngIf="list.itemsInProcess != 0 && list.itemsCompleted != 0"
+  <circle-progress *ngIf="list.itemsCompleted != 0"
     [percent]="(list.itemsCompleted * 100)/(list.itemsNotStarted + list.itemsInProcess + list.itemsCompleted)"
     [radius]="8"
     [outerStrokeWidth]="3"
