--- a/Angular/src/app/side-menu/side-menu-list-element/side-menu-list-element.component.scss
+++ b/Angular/src/app/side-menu/side-menu-list-element/side-menu-list-element.component.scss
@@ -22,7 +22,7 @@ a:hover{
   width: 112%;
   height: 50px;
   font-size: 18px;
-  font-family: $regular-text-font;
+  font-family: $regular-text-font, Roboto, sans-serif;
 }
 
 p{
