--- a/Angular/src/app/choice-dialog/choice-dialog.component.scss
+++ b/Angular/src/app/choice-dialog/choice-dialog.component.scss
@@ -21,7 +21,7 @@ div{
   font-size: 16px;
   border: 2px solid $tertiary-background-color;
   border-radius: 10px;
-  font-family: $regular-text-font;
+  font-family: $regular-text-font, Roboto, sans-serif;
   background-color: $secondary-background-color;
   color: $text-color;
   width: 60px;
