--- a/Angular/src/app/list/list-create/list-create.component.scss
+++ b/Angular/src/app/list/list-create/list-create.component.scss
@@ -1,4 +1,4 @@
-@import "../../style.scss";
+@import "../../../style.scss";
 
 #container{
   width: 100%;
@@ -19,7 +19,7 @@
   border-radius: 10px;
   color: $text-color;
   font-size: 18px;
-  font-family: $regular-text-font;
+  font-family: $regular-text-font, Roboto, sans-serif;
   width: calc(100% - 100px);
   padding: 5px 8px;
   outline: none
@@ -29,7 +29,7 @@
   width: 80px;
   height: 40px;
   color: $text-color;
-  font-family: $regular-text-font;
+  font-family: $regular-text-font, Roboto, sans-serif;
   background-color: $primary-background-color;
   border: 2px solid $tertiary-background-color;
   border-radius: 10px;
