--- a/Angular/src/style.scss
+++ b/Angular/src/style.scss
@@ -117,7 +117,7 @@ section .mat-expansion-panel-body{
   padding: 0 16px 16px 16px;
   color: $text-color;
   font-size: 14px;
-  font-family: $regular-text-font;
+  font-family: $regular-text-font, Roboto, sans-serif;
 }
 
 input[type="checkbox"]{
@@ -159,3 +159,151 @@ app-choice-dialog{
 .mat-mdc-dialog-container .mdc-dialog__surface{
   background-color: $secondary-background-color !important;
 }
+
+mat-form-field .mdc-text-field--filled:not(.mdc-text-field--disabled){
+  background: $primary-background-color;
+  border-radius: 10px;
+  border: none;
+}
+
+.mat-mdc-form-field-focus-overlay{
+  background: $primary-background-color;
+}
+
+.mdc-text-field--filled .mdc-line-ripple::after{
+  border-bottom: none !important;
+}
+
+.mdc-line-ripple::before{
+  border: none !important;
+}
+
+mat-option:not([disabled]):focus .md-select-value{
+  border-bottom-color: #000;
+}
+
+mat-form-field mat-select{
+  color: $text-color;
+  font-family: $regular-text-font, Roboto, sans-serif;
+  font-size: 16px;
+}
+
+mat-form-field .mat-mdc-select-arrow{
+  color: $text-color;
+}
+
+.mat-mdc-form-field.mat-focused .mat-mdc-select-arrow{
+  color: $grey !important;
+}
+
+.mat-mdc-select-panel{
+  background-color: $secondary-background-color !important;
+}
+
+mat-option{
+  color: $text-color !important;
+  font-family: $regular-text-font, Roboto, sans-serif;
+}
+
+mat-option:hover{
+  background-color: $tertiary-background-color !important;
+}
+
+.mat-mdc-option.mdc-list-item--selected:not(.mdc-list-item--disabled) .mdc-list-item__primary-text,
+.mat-primary .mat-pseudo-checkbox-checked.mat-pseudo-checkbox-minimal::after{
+  color: $accent-color !important;
+}
+
+.mat-datepicker-content{
+  background-color: $secondary-background-color;
+}
+
+.mat-mdc-button:not(:disabled), .mat-mdc-button.mat-unthemed, .mat-calendar-body-cell-content,
+.mat-calendar-body-label, .mat-calendar-table-header{
+  color: $text-color !important;
+  font-family: $regular-text-font, Roboto, sans-serif;
+}
+
+.mat-calendar-previous-button:after, .mat-calendar-next-button:after{
+  border-color: $text-color !important;
+}
+
+.mat-calendar-body-selected{
+  background-color: $text-color !important;
+  color: $accent-color !important;
+}
+
+.ngx-mat-timepicker form .ngx-mat-timepicker-table
+.ngx-mat-timepicker-tbody tr td .mat-mdc-icon-button .mat-icon{
+  color: $text-color
+}
+
+.mat-mdc-form-field-subscript-wrapper{
+  display: none;
+}
+
+.ngx-mat-timepicker form .ngx-mat-timepicker-table .ngx-mat-timepicker-tbody tr
+td.ngx-mat-timepicker-spacer,
+.ngx-mat-timepicker form .ngx-mat-timepicker-table .ngx-mat-timepicker-tbody tr td .mat-mdc-form-field
+.mdc-text-field--filled .mat-mdc-form-field-infix input{
+  color: $text-color
+}
+
+.ngx-mat-timepicker form .ngx-mat-timepicker-table .ngx-mat-timepicker-tbody tr td .mat-mdc-form-field
+.mdc-text-field--filled .mat-mdc-form-field-infix input{
+  border-bottom: 1px solid $text-color;
+}
+
+.ngx-mat-timepicker form .ngx-mat-timepicker-table .ngx-mat-timepicker-tbody tr td .mat-mdc-form-field{
+  margin: 0 3px;
+}
+
+.ngx-mat-timepicker-table{
+  display: flex;
+}
+
+.ngx-mat-timepicker-tbody{
+  display: flex;
+  flex-direction: column;
+}
+
+.ngx-mat-timepicker-tbody tr{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.ngx-mat-timepicker form .ngx-mat-timepicker-table .ngx-mat-timepicker-tbody tr td:nth-child(4){
+  display: none !important;
+}
+
+.ngx-mat-timepicker form .ngx-mat-timepicker-table .ngx-mat-timepicker-tbody tr td{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.mat-mdc-icon-button .mat-mdc-button-touch-target{
+  height: 24px !important;
+  width: 24px !important;
+}
+
+.ngx-mat-timepicker form .ngx-mat-timepicker-table .ngx-mat-timepicker-tbody tr td .mat-mdc-form-field
+.mdc-text-field--filled .mat-mdc-form-field-infix{
+  padding-top: 0 !important;
+}
+
+#mat-datepicker-0 > ngx-mat-calendar-header > div > div >
+button.mat-calendar-period-button.mdc-button.mat-mdc-button.mat-unthemed.mat-mdc-button-base > span.mdc-button__label
+> svg > polygon{
+  fill: $text-color;
+}
+
+#mat-datepicker-0 > div > ngx-mat-month-view > table > tbody > tr > td:hover .mat-calendar-body-cell-content{
+  background-color: $tertiary-background-color !important;
+}
+
+.mat-mdc-icon-button{
+  color: $text-color !important;
+}
+
