--- a/Angular/src/app/choice-dialog/choice-dialog.component.html
+++ b/Angular/src/app/choice-dialog/choice-dialog.component.html
@@ -2,6 +2,6 @@
 <div mat-dialog-content *ngIf="data" [innerHTML]="data.message">
 </div>
 <div mat-dialog-actions class="buttons">
-  <button mat-button mat-dialog-close>No</button>
-  <button mat-button mat-dialog-close (click)="handleDelete()" cdkFocusInitial>Ok</button>
+  <button mat-button mat-dialog-close [mat-dialog-close]="false">No</button>
+  <button mat-button mat-dialog-close [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
 </div>
