--- a/Angular/src/app/item/item-create/item-create.component.html
+++ b/Angular/src/app/item/item-create/item-create.component.html
@@ -1,4 +1,8 @@
-<div id="container">
+<section id="container">
+  <header>
+    <h3>{{type == 0 ? 'Creating task' : 'Updating task'}}</h3>
+    <fa-icon [icon]="faXmark" (click)="handleClose()"></fa-icon>
+  </header>
   <div class="title-container">
     <input [(ngModel)]="title" (keyup)="onChange($event)" placeholder="Enter title" required>
     <div id="validation-messages-container">
@@ -46,5 +50,8 @@
       <label for="remind">Remind hour before</label>
     </div>
   </div>
-  <button type="submit" [disabled]="disabled" (click)="handleSubmit($event)">Submit</button>
-</div>
+  <div class="button-container">
+    <button class="cancel" (click)="handleClose()">Cancel</button>
+    <button type="submit" [disabled]="disabled" (click)="handleSubmit($event)">Save</button>
+  </div>
+</section>
