--- a/Angular/src/app/item/item-create/item-create.component.scss
+++ b/Angular/src/app/item/item-create/item-create.component.scss
@@ -8,6 +8,22 @@
   margin-top: 20px;
 }
 
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 3px 20px 3px;
+}
+
+h3{
+  font-family: $thin-text-font;
+}
+
+header fa-icon{
+  font-size: 24px;
+  cursor: pointer;
+}
+
 .title-container input, .description-container textarea{
   background-color: $primary-background-color;
   border: 2px solid $tertiary-background-color;
@@ -27,8 +43,15 @@
   max-width: 100%;
 }
 
-button[type="submit"]{
+.button-container{
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+button[type="submit"], .cancel{
+  width: 45%;
   height: 40px;
   color: $text-color;
   font-family: $regular-text-font, Roboto, sans-serif;
@@ -45,7 +68,7 @@ button[type="submit"]:disabled{
   color: $grey;
 }
 
-button[type="submit"]:not(:disabled):hover{
+button[type="submit"]:not(:disabled):hover, .cancel:hover{
   background-color: $primary-background-color;
 }
 
@@ -64,6 +87,7 @@ button[type="submit"]:not(:disabled):hover{
 .priority-container label, .status-container label, .datetime-container label{
   margin-bottom: 10px;
   display: block;
+  padding-left: 4px
 }
 
 .datetime-container{
@@ -83,6 +107,7 @@ button[type="submit"]:not(:disabled):hover{
 #remind-container{
   display: flex;
   align-items: center;
+  padding-left: 4px;
 }
 
 #remind{
