--- a/Angular/src/app/list/list-view/list-view.component.scss
+++ b/Angular/src/app/list/list-view/list-view.component.scss
@@ -1,8 +1,10 @@
 @import "../../../style.scss";
 
 section#list{
-  width: 100%;
-  padding: 30px 20%
+  width: 60%;
+  max-width: 540px;
+  padding: 30px 0;
+  margin: 0 auto;
 }
 
 header{
@@ -72,7 +74,7 @@ fa-icon{
   color: $red;
 }
 
-section#hidden-items, section#not-hidden-items{
+section#not-hidden-items{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -84,7 +86,6 @@ section#hidden-items, section#not-hidden-items{
   align-items: center;
   min-height: 40px;
   background: $primary-background-color;
-  border: 2px solid $grey;
   color: $grey;
   width: 100%;
   margin: 15px 0;
