feat: added login and register pages, partially implemented login and register

--- a/Angular/src/app/side-menu/side-menu.component.html
+++ b/Angular/src/app/side-menu/side-menu.component.html
@@ -26,3 +26,4 @@
     </mat-expansion-panel>
   </li>
 </ul>
+<button class="logout" (click)="handleLogout()"><fa-icon [icon]="faRightFromBracket"></fa-icon>Logout</button>
