--- a/Angular/src/app/today/today.component.html
+++ b/Angular/src/app/today/today.component.html
@@ -1,6 +1,6 @@
 <section id="list">
   <header>
-    <h2>Hello, <span class="accent">{{username}}</span></h2>
+    <h2>Hello, <span class="accent">{{this.userService.username}}</span></h2>
   </header>
     <div class="container">
       <div class="container-header">
