--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container>
-  <mat-sidenav *ngIf="isLoggedIn" opened mode="side">
+  <mat-sidenav *ngIf="userService.isLoggedIn" opened mode="side">
     <h1>To<span class="accent">Do</span> app.</h1>
     <app-side-menu></app-side-menu>
   </mat-sidenav>
