update: environment added, integration with backend added, packages on frontend updated, logging added, priority enum on backend changed, code style issues fixed, massive code refactor

--- a/Angular/src/app/components/list/list-create/list-create.component.html
+++ b/Angular/src/app/components/list/list-create/list-create.component.html
@@ -1,7 +1,7 @@
 <div id="container">
   <app-list-title-editor
     [isArchived]="isArchived"
-    [type]="0"
+    [type]="'create'"
   ></app-list-title-editor>
   <div id="archived-container">
     <input type="checkbox" id="archived" [(ngModel)]="isArchived" />
