--- a/Angular/src/app/components/today/today.component.html
+++ b/Angular/src/app/components/today/today.component.html
@@ -1,7 +1,7 @@
 <section id="list">
   <header>
     <h2>
-      Hello, <span class="accent">{{ this.userService.username }}</span>
+      Hello, <span class="accent">{{ this.username }}</span>
     </h2>
   </header>
   <div class="container">
