--- a/Angular/src/app/components/item/item-create/item-create.component.html
+++ b/Angular/src/app/components/item/item-create/item-create.component.html
@@ -1,6 +1,6 @@
 <section id="container">
   <header>
-    <h3>{{ type == 0 ? "Creating task" : "Updating task" }}</h3>
+    <h3>{{this.componentTitle}}</h3>
     <fa-icon [icon]="faXmark" (click)="handleClose()"></fa-icon>
   </header>
   <div class="title-container">
