--- a/Angular/src/app/components/item/item-view/item-view.component.html
+++ b/Angular/src/app/components/item/item-view/item-view.component.html
@@ -25,7 +25,7 @@
           (click)="handleChangePriority($event)"
           class="priority-button"
           [icon]="faStar"
-          [class]="item.priority == 2 ? 'high-priority' : 'standard-priority'"
+          [class]="item.priority === 1 ? 'high-priority' : 'standard-priority'"
         ></fa-icon>
         <button
           class="menu-toggle"
@@ -49,29 +49,8 @@
         <span>Delete</span>
       </button>
     </mat-menu>
-    <p
-      selectableText
-      class="deadline"
-      *ngIf="
-        deadline && (deadline.getTime() - today.getTime()) / MILLIS_PER_DAY > 0
-      "
-    >
-      <fa-icon [icon]="faBell" *ngIf="item.remind" class="remind"></fa-icon
-      >Deadline:
-      {{
-        Math.round((deadline.getTime() - today.getTime()) / MILLIS_PER_DAY) > 1
-          ? "in " +
-            Math.round(
-              (deadline.getTime() - today.getTime()) / MILLIS_PER_DAY
-            ) +
-            " days"
-          : "today"
-      }}
-      at {{ deadline.getHours() }}:{{
-        deadline.getMinutes() < 10
-          ? "0" + deadline.getMinutes()
-          : deadline.getMinutes()
-      }}
+    <p selectableText class="deadline">
+      <fa-icon [icon]="faBell" *ngIf="item.remind" class="remind" />{{ this.getDeadline() }}
     </p>
   </mat-expansion-panel>
   <app-item-create
@@ -79,10 +58,10 @@
     [title]="item.title"
     [description]="item.description"
     [listID]="item.toDoListID"
-    [priority]="item.priority == 2 ? 1 : 0"
+    [priority]="item.priority"
     [remind]="item.remind"
     [status]="item.status"
-    [type]="1"
+    [type]="'update'"
     [deadline]="item.deadline"
     [id]="item.id"
     [createdAt]="item.createdAt"
