--- a/Angular/src/app/app.component.scss
+++ b/Angular/src/app/app.component.scss
@@ -20,6 +20,42 @@ mat-sidenav-container {
   height: 100%;
 }
 
+.notification-button{
+  position: fixed;
+  right: 0;
+  top: 40px;
+  width: 50px;
+  height: 50px;
+  background: $secondary-background-color;
+  border: none;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  color: $text-color;
+  font-size: 18px;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.notification-button-active{
+  right: 300px;
+}
+
+.notification-button-container{
+  position: relative;
+}
+
+.notifications-number{
+  position: absolute;
+  top: -5px;
+  right: 10px;
+  display: block;
+  background-color: $accent-color;
+  font-size: 14px;
+  height: 6px;
+  min-width: 6px;
+  border-radius: 3px;
+}
+
 h1 {
   font-family: $bold-text-font, sans-serif;
   font-weight: bold;
